--- a/resoures/contact.html
+++ b/resoures/contact.html
@@ -10,7 +10,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="container navbar-container">
-      <a href="index.html" class="logo-container">
+      <a href="../index.html" class="logo-container">
         <img src="../img/Designer.jpeg" alt="GradeAnt Logo" class="logo-image">
         <h1 class="logo">Grade<span>Ant</span></h1>
       </a>
