--- a/student/student_upload.html
+++ b/student/student_upload.html
@@ -7,40 +7,24 @@
   <title>GradeAnt: AI-Powered Homework Grader</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="imf/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
-  <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="../img/apple-touch-icon.png" />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css\asthetic_style.css" />
+  <link rel="stylesheet" href="../css/asthetic_style.css" />
+  <!-- <link rel="stylesheet" href="css/nav.css" /> -->
+  <script src="..\component-loader.js"></script>
+  <link rel="stylesheet" href="..\student\student_upload.css" />
+
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 <body>
-  <header class="site-header">
-    <div class="header-container">
-      <div class="brand">
-        <img src="img/favicon-32x32.png" alt="GradeAnt Logo" class="logo" />
-        <h1>GradeAnt</h1>
-      </div>
-      <p class="tagline">AI-Powered Homework Grader</p>
-    </div>
-  </header>
-  
-  <main class="main-content">
-    <div class="container">
-      <!-- Primary Navigation -->
-      <nav class="primary-nav" aria-label="Primary Navigation">
-        <ul class="nav-tabs" role="tablist">
-          <li role="presentation">
-            <button class="tab-btn active" id="upload-tab-btn" data-tab="upload-section" role="tab" aria-selected="true" aria-controls="upload-section">
-              <i class="fas fa-upload"></i> Upload Assignment
-            </button>
-          </li>
-        </ul>
-      </nav>
-
-      <!-- Upload Assignment Section -->
+  <!-- Navigation will be loaded here -->
+  <div id="nav"></div>
+  <div class="container">
       <section id="upload-section" class="tab-content active" role="tabpanel" aria-labelledby="upload-tab-btn">
         <div class="card">
           <div class="card-header">
@@ -48,14 +32,13 @@
             <p>Submit your assignment files in PDF format.</p>
           </div>
           <div class="card-body">
-            <form id="upload-form" class="form">
+            <form id="upload-form" class="form" action="#" method="POST" enctype="multipart/form-data">
               <div class="form-row">
                 <div class="form-group">
                   <label for="upload-type">Upload Type</label>
                   <select id="upload-type" class="form-control" required>
                     <option value="">Select Upload Type</option>
                     <option value="student">Student Assignment</option>
-                    <option value="teacher">Teacher Question Paper</option>
                   </select>
                 </div>
                 <div class="form-group">
@@ -77,7 +60,7 @@
               <div class="file-list-container">
                 <ul id="file-list" class="file-list"></ul>
               </div>
-              <div id="progress-container" class="progress-container" aria-live="polite" style="display:none;">
+              <div id="progress-container" class="progress-container" style="display:none;">
                 <div class="progress">
                   <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -96,13 +79,14 @@
     </div>
   </main>
 
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="container">
       <p>&copy; 2025 GradeAnt. All rights reserved.</p>
     </div>
   </footer>
-
   <!-- Scripts -->
-  <script src="javascript\upload_pdf.js"></script>
+  <script src="../javascript/upload_pdf.js"></script>
+
 </body>
 </html>
