--- a/auth/signup.html
+++ b/auth/signup.html
@@ -58,8 +58,8 @@
         <a href="..\resoures\blog.html">Blog</a>
         <a href="..\resoures\contact.html">Contact</a>
         <div class="auth-buttons">
-          <a href="login.html" class="btn btn-secondary">Login</a>
-          <a href="signup.html" class="btn btn-primary active">Sign Up</a>
+          <a href="login.html" class="btn btn-primary">Login</a>
+          <a href="signup.html" class="btn btn-secondary active">Sign Up</a>
         </div>
       </div>
     </div>
