--- a/quick_links/demo.html
+++ b/quick_links/demo.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Grade-Ant Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Styles -->
+    <link rel="stylesheet" href="../quick_links/demo.css" />
   <style>
     * {
       margin: 0;
@@ -91,14 +93,14 @@
         <img src="../img/Screenshot 2025-04-03 164627.png" alt="Upload Assignment / Question Paper" />
         <div class="option-content">
           <h3>Upload Assignment / Question Paper</h3>
-          <button onclick="location.href='frontend/upload_pdf.html'">Go to Upload</button>
+          <button onclick="location.href='../upload_pdf.html'">Go to Upload</button>
         </div>
       </div>
       <div class="option">
         <img src="../img/ChatGPT Image Apr 3, 2025, 04_52_22 PM.png" alt="View Grades" />
         <div class="option-content">
           <h3>View Grades</h3>
-          <button onclick="location.href='frontend/view_grades.html'">Go to Grades</button>
+          <button onclick="location.href='../view_grades.html'">Go to Grades</button>
         </div>
       </div>
     </div>
