--- a/dashboards/student_dashboard_.html
+++ b/dashboards/student_dashboard_.html
@@ -42,6 +42,7 @@
       <!-- 2. Stats Cards (Directly below welcome) -->
       <div class="dashboard-stats">
         <div class="stat-card">
+          <h3>Upcoming...</h3> 
           <h3>Overall Grade</h3>
           <div class="stat-value">B+</div>
           <div class="stat-change positive">
@@ -49,6 +50,7 @@
           </div>
         </div>
         <div class="stat-card">
+          <h3>Upcoming...</h3> 
           <h3>Assignments Completed</h3>
           <div class="stat-value">18/24</div>
           <div class="stat-change neutral">
@@ -56,6 +58,7 @@
           </div>
         </div>
         <div class="stat-card">
+          <h3>Upcoming...</h3> 
           <h3>Average Score</h3>
           <div class="stat-value">83%</div>
           <div class="stat-change positive">
@@ -63,6 +66,7 @@
           </div>
         </div>
         <div class="stat-card">
+          <h3>Upcoming...</h3> 
           <h3>Upcoming Due</h3>
           <div class="stat-value">3</div>
           <div class="stat-change negative">
@@ -88,7 +92,7 @@
             </p>
             <button
               class="btn btn-primary"
-              onclick="location.href='../student/student_upload.html'"
+              onclick="setNavAndGo('student-nav-upload', '../student/student_upload.html')"
             >
               Submit Work
             </button>
@@ -110,7 +114,7 @@
             </p>
             <button
               class="btn btn-primary"
-              onclick="location.href='../student/student_grade.html'"
+               onclick="setNavAndGo('student-nav-grades', '../student/student_grade.html')"
             >
               View Grades
             </button>
@@ -122,6 +126,7 @@
             <img src="..\img\study_resources.png" alt="Study Resources" />
           </div>
           <div class="option-content">
+            <h3>Upcoming...</h3> 
             <h3>Study Resources</h3>
             <p>
               Access study materials, practice questions, and additional
@@ -141,6 +146,7 @@
             <img src="..\img\academic_calendar.png" alt="Academic Calendar" />
           </div>
           <div class="option-content">
+            <h3>Upcoming...</h3> 
             <h3>Academic Calendar</h3>
             <p>
               View important dates, upcoming assignments, tests and project
@@ -159,6 +165,7 @@
       <!-- 4. Upcoming Assignments and Progress Cards (Between dashboard options and sections below) -->
       <!-- Upcoming Assignments Section -->
       <div class="upcoming-section">
+        <h3>Upcoming...</h3> 
         <h2>Upcoming & Recent Assignments</h2>
         <div class="table-responsive">
           <table class="assignment-table">
@@ -233,6 +240,7 @@
       <!-- Progress Section -->
       <div class="progress-cards">
         <div class="progress-card">
+          <h3>Upcoming...</h3> 
           <h3>Semester Progress</h3>
           <div class="progress-bar">
             <div
