--- a/quick_links/features.html
+++ b/quick_links/features.html
@@ -376,11 +376,12 @@
                     <!-- Testimonial 1 -->
                     <div class="testimonial-card">
                         <p class="testimonial-text">GradeAnt reduced my grading time by 70% while allowing me to provide more detailed feedback to my 200+ students. It's been a game-changer for my large intro courses.</p>
+                        <p class="section-subtitle">TBA</p> 
                         <div class="testimonial-author">
                             <div class="author-avatar"></div>
                             <div class="author-info">
-                                <span class="author-name">Dr. Sarah Johnson</span>
-                                <span class="author-role">Professor of Biology, Stanford University</span>
+                                <span class="author-name">xyz</span>
+                                <span class="author-role">Professor , XYZ University</span>
                             </div>
                         </div>
                     </div>
@@ -388,11 +389,12 @@
                     <!-- Testimonial 2 -->
                     <div class="testimonial-card">
                         <p class="testimonial-text">The AI feedback is remarkably accurate, and my students appreciate the consistency and rapid turnaround. I can now focus on higher-value interactions with my class.</p>
+                        <p class="section-subtitle">TBA</p> 
                         <div class="testimonial-author">
                             <div class="author-avatar"></div>
                             <div class="author-info">
-                                <span class="author-name">Mark Rodriguez</span>
-                                <span class="author-role">High School Math Teacher</span>
+                                <span class="author-name">xyz</span>
+                                <span class="author-role">XYZ</span>
                             </div>
                         </div>
                     </div>
@@ -400,11 +402,12 @@
                     <!-- Testimonial 3 -->
                     <div class="testimonial-card">
                         <p class="testimonial-text">The analytics helped me identify learning gaps I would have missed otherwise. GradeAnt doesn't just save time—it makes me a more effective educator.</p>
+                        <p class="section-subtitle">TBA</p> 
                         <div class="testimonial-author">
                             <div class="author-avatar"></div>
                             <div class="author-info">
-                                <span class="author-name">Prof. Linda Chen</span>
-                                <span class="author-role">Computer Science Department, MIT</span>
+                                <span class="author-name">xyz</span>
+                                <span class="author-role">XYZ</span>
                             </div>
                         </div>
                     </div>
@@ -418,6 +421,7 @@
                 <div class="section-header">
                     <h2 class="section-title">Ready to Transform Your Grading?</h2>
                     <p class="section-subtitle">Join thousands of educators who save time and improve student outcomes with GradeAnt</p>
+                    <p class="section-subtitle">TBA</p> 
                 </div>
                 <div class="text-center mt-8">
                     <a href="..\quick_links\demo.html" class="cta-button">Request a Demo</a>
@@ -446,8 +450,8 @@
                         <h3 class="footer-title">Resources</h3>
                         <ul class="footer-links">
                             <li><a href="#" class="footer-link">Documentation</a></li>
-                            <li><a href="#" class="footer-link">API Reference</a></li>
-                            <li><a href="#" class="footer-link">Knowledge Base</a></li>
+                            <!-- <li><a href="#" class="footer-link">API Reference</a></li>
+                            <li><a href="#" class="footer-link">Knowledge Base</a></li> -->
                             <li><a href="..\resoures\blog.html" class="footer-link">Blog</a></li>
                         </ul>
                     </div>
