--- a/resoures/contact.html
+++ b/resoures/contact.html
@@ -65,7 +65,7 @@
         </div>
 
         <!-- Contact Info -->
-        <div class="contact-info">
+        <!-- <div class="contact-info">
           <h2>Get in Touch</h2>
           <div class="info-item">
             <div class="info-icon">📧</div>
@@ -106,7 +106,7 @@
               <a href="#" class="social-icon">
                 <img src="..\img/icon-instagram.svg" alt="Instagram">
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
