--- a/teacher/teacher_upload.html
+++ b/teacher/teacher_upload.html
@@ -87,5 +87,6 @@
   </footer>
   <!-- Scripts -->
   <script src="../javascript/upload_pdf.js"></script>
+  <script >setupNavLinkHighlighting();</script>
 </body>
 </html>
