--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
             <!-- <li><a href="home.html">Home</a></li> -->
             <li><a href="quick_links\features.html">Features</a></li>
             <!-- <li><a href="how-it-works.html">How It Works</a></li> -->
-            <li><a href="quick_links\demo.html">Demo</a></li>
+            <!-- <li><a href="quick_links\demo.html">Demo</a></li> -->
             <li><a href="quick_links\getstarted.html">Get Started</a></li>
           </ul>
         </div>
@@ -895,9 +895,9 @@
         <div class="footer-column">
           <h3>Contact Us</h3>
           <ul>
-            <li><a href="mailto:info@gradeant.com">info@gradeant.com</a></li>
-            <li><a href="tel:+11234567890">+1 (123) 456-7890</a></li>
-            <li>123 Education Lane, Suite 100<br>Tech City, AI 90210</li>
+            <li><a href="mailto:info@gradeant.com">xyzinfo@gradeant.com</a></li>
+            <li><a href="tel:+xxxxxxxxxxxxxx">+x (xxx) xxx-xxxx</a></li>
+            <li>ABCD , XYZ<br>Tech City, AI 90210</li>
           </ul>
           <div class="social-icons mt-3">
             <a href="#linkedin"><span>in</span></a>
