--- a/resoures/blog.html
+++ b/resoures/blog.html
@@ -173,6 +173,7 @@
     <div class="container">
       <div class="newsletter-content">
         <h2>Subscribe to Our Newsletter</h2>
+        <h3>Upcoming...</h3> 
         <p>Get the latest insights on education, AI, and grading strategies delivered to your inbox.</p>
         <form class="newsletter-form">
           <input type="email" placeholder="Your email address" required>
