--- a/auth/signup.html
+++ b/auth/signup.html
@@ -159,7 +159,7 @@
         </div>
         
         <div class="auth-image">
-          <img src="../img/Sign_up.png" alt="Sign Up Illustration">
+          <img src="../img/Sign_Up.png" alt="Sign Up Illustration">
           <div class="feature-highlights">
             <h3 id="roleFeatures">Why students love GradeAnt</h3>
             <ul id="roleBenefits">
