--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
     }
     
     .hero-content {
-      position: relative;
+      position: absolute;
       z-index: 1;
-      max-width: 800px;
+      max-width: 700px;
       color: white;
-      padding: 40px 0;
+      padding: 10px 0;
     }
     
     .hero-title {
@@ -681,7 +681,7 @@
       <div class="nav-links" id="navLinks">
         <!-- <a href="Frontend\Gradeant_dashboard.html">Dashboard</a> -->
         <a href="resoures\about.html">About</a>
-        <a href="resoures\blog.html">Blog</a>
+        <!-- <a href="resoures\blog.html">Blog</a> -->
         <a href="resoures\contact.html">Contact</a>
         <div class="auth-buttons">
           <a href="auth\login.html" class="btn btn-secondary">Login</a>
@@ -877,7 +877,7 @@
         <div class="footer-column">
           <h3>Resources</h3>
           <ul>
-            <li><a href="resoures\blog.html">Blog</a></li>
+            <!-- <li><a href="resoures\blog.html">Blog</a></li> -->
             <!-- <li><a href="Frontend\Gradeant_dashboard.html">Dashboard</a></li> -->
             <li><a href="resoures\about.html">About Us</a></li>
             <li><a href="resoures\contact.html">Contact</a></li>
@@ -889,7 +889,7 @@
           <ul>
             <li><a href="legal\terms.html">Terms of Service</a></li>
             <li><a href="legal\privacy.html">Privacy Policy</a></li>
-            <li><a href="legal\cookies.html">Cookie Policy</a></li>
+            <!-- <li><a href="legal\cookies.html">Cookie Policy</a></li> -->
           </ul>
         </div>
         <div class="footer-column">
