--- a/resoures/about.html
+++ b/resoures/about.html
@@ -18,7 +18,7 @@
       <div class="nav-links" id="navLinks">
         <!-- <a href="dashboard.html">Dashboard</a> -->
         <a href="about.html" class="active">About</a>
-        <a href="blog.html">Blog</a>
+        <!-- <a href="blog.html">Blog</a> -->
         <a href="contact.html">Contact</a>
         <div class="auth-buttons">
           <a href="..\auth\login.html" class="btn btn-secondary">Login</a>
@@ -126,12 +126,12 @@
             <h3>Product</h3>
             <a href="..\quick_links\features.html">Features</a>
             <!-- <a href="pricing.html">Pricing</a> -->
-            <a href="..\quick_links\demo.html">Demo</a>
+            <!-- <a href="..\quick_links\demo.html">Demo</a> -->
           </div>
           <div class="footer-column">
             <h3>Company</h3>
             <a href="about.html">About</a>
-            <a href="blog.html">Blog</a>
+            <!-- <a href="blog.html">Blog</a> -->
             <a href="contact.html">Contact</a>
           </div>
           <div class="footer-column">
