--- a/quick_links/features.html
+++ b/quick_links/features.html
@@ -424,7 +424,7 @@
                     <p class="section-subtitle">TBA</p> 
                 </div>
                 <div class="text-center mt-8">
-                    <a href="..\quick_links\demo.html" class="cta-button">Request a Demo</a>
+                    <a href="..\auth\signup.html" class="cta-button">Request a Demo</a>
                 </div>
             </div>
         </section>
