--- a/auth/login.html
+++ b/auth/login.html
@@ -18,7 +18,7 @@
       <div class="nav-links" id="navLinks">
         <!-- <a href="dashboard.html">Dashboard</a> -->
         <a href="..\resoures\about.html">About</a>
-        <a href="..\resoures\blog.html">Blog</a>
+        <!-- <a href="..\resoures\blog.html">Blog</a> -->
         <a href="..\resoures\contact.html">Contact</a>
         <div class="auth-buttons">
           <a href="login.html" class="btn btn-secondary active">Login</a>
