--- a/quick_links/features.html
+++ b/quick_links/features.html
@@ -452,7 +452,7 @@
                             <li><a href="#" class="footer-link">Documentation</a></li>
                             <!-- <li><a href="#" class="footer-link">API Reference</a></li>
                             <li><a href="#" class="footer-link">Knowledge Base</a></li> -->
-                            <li><a href="..\resoures\blog.html" class="footer-link">Blog</a></li>
+                            <!-- <li><a href="..\resoures\blog.html" class="footer-link">Blog</a></li> -->
                         </ul>
                     </div>
                     <div class="footer-column">
