--- a/auth/signup.html
+++ b/auth/signup.html
@@ -55,7 +55,7 @@
       <div class="nav-links" id="navLinks">
         <!-- <a href="dashboard.html">Dashboard</a> -->
         <a href="..\resoures\about.html">About</a>
-        <a href="..\resoures\blog.html">Blog</a>
+        <!-- <a href="..\resoures\blog.html">Blog</a> -->
         <a href="..\resoures\contact.html">Contact</a>
         <div class="auth-buttons">
           <a href="login.html" class="btn btn-primary">Login</a>
