--- a/student/student_upload.html
+++ b/student/student_upload.html
@@ -69,7 +69,7 @@
               <div id="alerts-container" class="alerts-container" aria-live="assertive"></div>
               <div class="form-actions">
                 <button type="submit" id="upload-btn" class="btn btn-primary">
-                  <i class="fas fa-upload"></i> Upload Files
+                  <i class="fas fa-upload"></i> Upload Assignments
                 </button>
               </div>
             </form>
