--- a/auth/login.html
+++ b/auth/login.html
@@ -17,6 +17,7 @@
       <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
       <div class="nav-links" id="navLinks">
         <!-- <a href="dashboard.html">Dashboard</a> -->
+         <a href="../index.html">Home</a>
         <a href="..\resoures\about.html">About</a>
         <!-- <a href="..\resoures\blog.html">Blog</a> -->
         <a href="..\resoures\contact.html">Contact</a>
