--- a/resoures/contact.html
+++ b/resoures/contact.html
@@ -119,6 +119,33 @@
     padding: 0 20px 15px;
   }
 }
+
+.social-links {
+  text-align: left;
+  margin: 20px 0;
+}
+
+.social-links h3 {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: baseline;
+  gap: 15px; /* space between icons */
+}
+
+.social-icon img {
+  width: 32px;   /* Set the desired icon size */
+  height: 32px;  /* Maintain aspect ratio for icons */
+  transition: transform 0.3s ease;
+}
+
+.social-icon img:hover {
+  transform: scale(1.1); /* Slight zoom on hover */
+}
+
   </style>
 
 </head>
@@ -133,6 +160,7 @@
       <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
       <div class="nav-links" id="navLinks">
         <!-- <a href="dashboard.html">Dashboard</a> -->
+         <a href="../index.html">Home</a>
         <a href="about.html">About</a>
         <!-- <a href="blog.html">Blog</a> -->
         <a href="contact.html" class="active">Contact</a>
@@ -181,7 +209,7 @@
         </div>
 
         <!-- Contact Info -->
-        <!-- <div class="contact-info">
+        <div class="contact-info">
           <h2>Get in Touch</h2>
           <div class="info-item">
             <div class="info-icon">📧</div>
@@ -195,7 +223,7 @@
             <div class="info-icon">📱</div>
             <div class="info-content">
               <h3>Phone</h3>
-              <p>+1 (555) 123-4567</p>
+              <p>+x (xxx) xxx-xxxx</p>
               <p>Mon-Fri: 9AM - 5PM EST</p>
             </div>
           </div>
@@ -211,18 +239,18 @@
             <h3>Connect With Us</h3>
             <div class="social-icons">
               <a href="#" class="social-icon">
-                <img src="..\img/icon-twitter.svg" alt="Twitter">
+                <img src="..\img\icon-twitter.svg" alt="Twitter">
               </a>
               <a href="#" class="social-icon">
-                <img src="..\img/icon-linkedin.svg" alt="LinkedIn">
+                <img src="..\img\icon-linkedin.svg" alt="LinkedIn">
               </a>
               <a href="#" class="social-icon">
-                <img src="..\img/icon-facebook.svg" alt="Facebook">
+                <img src="..\img\icon-facebook.svg" alt="Facebook">
               </a>
               <a href="#" class="social-icon">
-                <img src="..\img/icon-instagram.svg" alt="Instagram">
+                <img src="..\img\icon-instagram.svg" alt="Instagram">
               </a>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
