--- a/resoures/about.html
+++ b/resoures/about.html
@@ -17,8 +17,9 @@
       <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
       <div class="nav-links" id="navLinks">
         <!-- <a href="dashboard.html">Dashboard</a> -->
+         <a href="../index.html">Home</a>
         <a href="about.html" class="active">About</a>
-        <!-- <a href="blog.html">Blog</a> -->
+        <!-- <a href="index.html">Home</a> -->
         <a href="contact.html">Contact</a>
         <div class="auth-buttons">
           <a href="..\auth\login.html" class="btn btn-secondary">Login</a>
