--- a/resoures/contact.html
+++ b/resoures/contact.html
@@ -318,9 +318,9 @@
         </div>
         <div class="footer-column">
           <h3>Company</h3>
-          <a href="../resources/about.html">About</a>
+          <a href="about.html">About</a>
           <!-- <a href="../resources/blog.html">Blog</a> -->
-          <a href="../resources/contact.html">Contact</a>
+          <a href="contact.html">Contact</a>
         </div>
         <div class="footer-column">
           <h3>Legal</h3>
