updated_teacher_dashboard

--- a/nav.html
+++ b/nav.html
@@ -1124,13 +1124,13 @@
       const navMappings = {
         student: [
           { patterns: ['dashboards/student_dashboard_', 'dashboard', 'index.html', '/'], id: 'student-nav-dashboard' },
-          { patterns: ['student_upload.html', 'student_upload'], id: 'student-nav-upload' },
-          { patterns: ['student_grade.html', 'student_grade'], id: 'student-nav-grades' }
+          { patterns: ['student/student_upload.html', 'student_upload'], id: 'student-nav-upload' },
+          { patterns: ['student/student_grade.html', 'student_grade'], id: 'student-nav-grades' }
         ],
         teacher: [
           { patterns: ['dashboards/teacher_dashboard', 'dashboard', 'index.html', '/'], id: 'teacher-nav-dashboard' },
-          { patterns: ['teacher_upload.html', 'teacher_upload'], id: 'teacher-nav-upload' },
-          { patterns: ['teacher_view_grade.html', 'teacher_view_grade'], id: 'teacher-nav-grades' }
+          { patterns: ['teacher/teacher_upload.html', 'teacher_upload'], id: 'teacher-nav-upload' },
+          { patterns: ['teacher/teacher_view_grade.html', 'teacher_view_grade'], id: 'teacher-nav-grades' }
         ]
       };
       
