--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar">
     <div class="container navbar-container">
       <a href="#" class="logo-container">
-        <img src="img\Designer.jpeg" alt="GradeAnt Logo" class="logo-image">
+        <img src="img\grade-antlogo-removebg-preview.png" alt="GradeAnt Logo" class="logo-image">
         <h1 class="logo">Grade<span>Ant</span></h1>
       </a>
       <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
@@ -51,32 +51,32 @@
       <p class="section-subtitle">Our AI-powered platform saves educators hours while providing students with detailed, actionable feedback.</p>
       <div class="features-grid">
         <div class="feature">
-          <div class="feature-icon">⚡</div>
+          <div class="ant-thinking text-6xl mb-4">⚡</div>
           <h3>Instant Feedback</h3>
           <p>AI analyzes and grades assignments in seconds, not hours. Upload an assignment and get comprehensive grading instantly.</p>
         </div>
         <div class="feature">
-          <div class="feature-icon">🔎</div>
+          <div class="ant-thinking text-6xl mb-4">🔎</div>
           <h3>Rich, Actionable Insights</h3>
           <p>Provides comprehensive feedback, pinpointing errors and suggesting improvements to help students learn from their mistakes.</p>
         </div>
         <div class="feature">
-          <div class="feature-icon">✍️</div>
+          <div class="ant-thinking text-6xl mb-4">✍️</div>
           <h3>Conquer Handwritten Chaos</h3>
           <p>Effortlessly grades freeform handwritten answersheets with ease. No more struggling to decipher student handwriting.</p>
         </div>
         <div class="feature">
-          <div class="feature-icon">🎯</div>
+          <div class="ant-thinking text-6xl mb-4">🎯</div>
           <h3>AI-Powered Precision</h3>
           <p>GradeFlow™ model analyzes STEM subjects with unmatched accuracy, understanding math, physics, chemistry, and more.</p>
         </div>
         <div class="feature">
-          <div class="feature-icon">⚙️</div>
+          <div class="ant-thinking text-6xl mb-4">⚙️</div>
           <h3>Grade Your Way</h3>
           <p>Customize grading with specific rubrics, question papers, and teacher personas to match your exact requirements.</p>
         </div>
         <div class="feature">
-          <div class="feature-icon">⏱️</div>
+          <div class="ant-thinking text-6xl mb-4">⏱️</div>
           <h3>Save Time</h3>
           <p>No more manual grading—focus on what really matters: teaching and supporting your students' learning journey.</p>
         </div>
@@ -151,6 +151,10 @@
   <section class="slideshow-section" id="demo">
     <div class="container">
       <h2 class="section-title">See GradeAnt in Action</h2>
+      <div class="bg-amber-50 p-6 rounded-lg flex flex-col items-center justify-center text-center feedback-card min-h-[300px] md:min-h-full">
+        <div class="ant-thinking text-10xl mb-4">🐜</div>
+      </div>
+
       <p class="section-subtitle">Experience how our platform transforms grading workflow</p>
       <div class="slideshow-container">
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -192,7 +196,7 @@
   <div class="container">
     <h2 class="cta-title">Ready to Transform Your Grading Experience?</h2>
     <p class="cta-description">Join thousands of educators who have reclaimed their time while providing better feedback to students.</p>
-    <button onclick="location.href='../quick_links/getstarted.html'"class="btn cta-button pulse" id="getStartedButton">
+    <button onclick="location.href='auth/signup.html'"class="btn cta-button pulse" id="getStartedButton">
       Get Started Today <span>→</span>
     </button>
   </div>
@@ -247,7 +251,7 @@
             <li><a href="quick_links\features.html">Features</a></li>
             <!-- <li><a href="how-it-works.html">How It Works</a></li> -->
             <!-- <li><a href="quick_links\demo.html">Demo</a></li> -->
-            <li><a href="quick_links\getstarted.html">Get Started</a></li>
+            <li><a href="auth\signup.html">Get Started</a></li>
           </ul>
         </div>
         <div class="footer-column">
