--- a/quick_links/features.html
+++ b/quick_links/features.html
@@ -15,6 +15,7 @@
             <div class="header-content">
                 <h1>GradeAnt</h1>
                 <nav class="nav-menu">
+                    <a href="../index.html"class="nav-link">Home</a>
                     <a href="#features" class="nav-link">Features</a>
                     <a href="#demo" class="nav-link">Demo</a>
                     <a href="#how-it-works" class="nav-link">How It Works</a>
@@ -440,6 +441,7 @@
                     <div class="footer-column">
                         <h3 class="footer-title">Quick Links</h3>
                         <ul class="footer-links">
+                            <li><a href="../index.html" class="footer-link">Home</a></li>
                             <li><a href="#features" class="footer-link">Features</a></li>
                             <li><a href="#demo" class="footer-link">Demo</a></li>
                             <li><a href="#how-it-works" class="footer-link">How It Works</a></li>
